<resources>
    <string name="app_name">f21</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_inicio">Inicio</string>
    <string name="menu_mi_perfil">Mi Perfil</string>
    <string name="menu_mis_creditos">Mis Creditos</string>
    <string name="menu_mis_reservas">Mis Reservas</string>
    <string name="menu_nueva_reserva">Nueva Reserva</string>
    <string name="menu_cerrar_sesion">Cerrar Sesion</string>
</resources>